# toggl-exporter-google-sheets

./: .gitignore  LICENSE  README.md  config.ini.sample  pyproject.toml
toggl_exporter/: google_sheets_api.py  main.py  toggl_api.py
